resolve index page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1 style="margin-top: -60px;"><a href="portfolio.html"
         style="margin-left: 1100px; margin-top: -100px;font-family: Sans-serif;font-size: 22px;font-weight: 30;text-decoration: none;color: black;">Portfolio</a>
 </h1>
-<h1 style="margin-top: -60px;"><a href="test.html"
+<h1 style="margin-top: -60px;"><a href="index.html"
         style="margin-left: 980px;font-family: Sans-serif;font-size: 22px;font-weight: bolder;text-decoration: none;color: black;">Home</a>
 </h1>
 
