--- a/Contact.html
+++ b/Contact.html
@@ -7,7 +7,7 @@
 <h3 style="margin-top: 50px;margin-left: 100px;font-family: Sans-serif;font-size: 22px;font-weight: bold;">Foad <br> Moghaddasi</h3> 
 <h1 style="margin-top: -70px;"><a href="Contact.html" style="margin-left: 1235px; margin-top: -100px;font-family: Sans-serif;font-size: 22px;font-weight: bolder;text-decoration: none;color: black;">Contact</a></h1>
 <h1 style="margin-top: -60px;"><a href="portfolio.html" style="margin-left: 1100px; margin-top: -100px;font-family: Sans-serif;font-size: 22px;font-weight: 30;text-decoration: none;color: black;">Portfolio</a></h1>
-<h1 style="margin-top: -60px;"><a href="test.html" style="margin-left: 980px;font-family: Sans-serif;font-size: 22px;font-weight: 30;text-decoration: none;color: black;">Home</a></h1>
+<h1 style="margin-top: -60px;"><a href="index.html" style="margin-left: 980px;font-family: Sans-serif;font-size: 22px;font-weight: 30;text-decoration: none;color: black;">Home</a></h1>
 <h5 style="font-family: handly;text-align: left;font-size: 156px;margin-left: 22%;margin-top: 150px;">Hey<br>Whats up ??</h5>
 <body>
     <div id="email-box" style="margin-top: -100px;">
