--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
 <h3 style="margin-top: 50px;margin-left: 100px;font-family: Sans-serif;font-size: 22px;font-weight: bold;">Foad <br> Moghaddasi</h3> 
 <h1 style="margin-top: -70px;"><a href="Contact.html" style="margin-left: 1235px; margin-top: -100px;font-family: Sans-serif;font-size: 22px;font-weight: 30;text-decoration: none;color: black;">Contact</a></h1>
 <h1 style="margin-top: -60px;"><a href="portfolio.html" style="margin-left: 1100px; margin-top: -100px;font-family: Sans-serif;font-size: 22px;font-weight: bolder;text-decoration: none;color: black;">Portfolio</a></h1>
-<h1 style="margin-top: -60px;"><a href="test.html" style="margin-left: 980px;font-family: Sans-serif;font-size: 22px;font-weight: 30;text-decoration: none;color: black;">Home</a></h1>
+<h1 style="margin-top: -60px;"><a href="index.html" style="margin-left: 980px;font-family: Sans-serif;font-size: 22px;font-weight: 30;text-decoration: none;color: black;">Home</a></h1>
 
 <body>
 <h1 style="font-size: 22px;text-align: center;margin-top: 100px;font-weight: 30;font-family: Sans-serif;">Just click on whichever you want</h1>
