--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,6 @@
 <body>
 <h1 style="font-size: 22px;text-align: center;margin-top: 100px;font-weight: 30;font-family: Sans-serif;">Just click on whichever you want</h1>
 <div id="insta-box" style="margin-left: 100px;margin-top: 75px;">
-    <a href="https://dribbble.com/fMoghaddasi"></a>
     <img src="insta.png" alt="insta" style="text-align: center;padding: 62px;">
     <h1 style="font-size: 22px;font-weight: bold;text-align: center;font-family: Sans-serif;">Instagram</h1>
 </div>
@@ -20,7 +19,7 @@
     <img src="linkedin.png" alt="linkedin" style="text-align: center;padding: 62px;">
     <h1 style="font-size: 22px;font-weight: bold;text-align: center;font-family: Sans-serif;">linkedin</h1>
 </div>
-<div id="dribbble-box" style="float: right;margin-right: 100px;margin-top: -449px;">
+<div href="https://dribbble.com/fMoghaddasi" id="dribbble-box" style="float: right;margin-right: 100px;margin-top: -449px;">
     <img src="dribbble.png" alt="dribbble" style="text-align: center;padding: 62px;">
     <h1 style="font-size: 22px;font-weight: bold;text-align: center;font-family: Sans-serif;">Dribbble</h1>
 </div>
