--- a/index.html
+++ b/index.html
@@ -7,17 +7,15 @@
 </head>
 
 <link rel="stylesheet" href="box-style.css">
-<h3 style="margin-top: 50px;margin-left: 100px;font-family: Sans-serif;font-size: 22px;font-weight: bold;">Foad <br>
-    Moghaddasi</h3>
-<h1 style="margin-top: -70px;"><a href="Contact.html"
-        style="margin-left: 1235px; margin-top: -100px;font-family: Sans-serif;font-size: 22px;font-weight: 30;text-decoration: none;color: black;">Contact</a>
-</h1>
-<h1 style="margin-top: -60px;"><a href="portfolio.html"
-        style="margin-left: 1100px; margin-top: -100px;font-family: Sans-serif;font-size: 22px;font-weight: 30;text-decoration: none;color: black;">Portfolio</a>
-</h1>
-<h1 style="margin-top: -60px;"><a href="index.html"
-        style="margin-left: 980px;font-family: Sans-serif;font-size: 22px;font-weight: bolder;text-decoration: none;color: black;">Home</a>
-</h1>
+
+<div class="header">
+    <h3 id="foad-title">Foad<br>Moghaddasi</h3>
+    <div class="menu">
+        <a class="menu-item" href="Contact.html" id="contact-menue">Contact</a>
+        <a class="menu-item" href="portfolio.html" id="Portfolio-menue">Portfolio</a>
+        <a class="menu-item" href="index.html" id="Home-menue">Home</a>
+    </div>
+</div>
 
 <body>
     <div id="box1" style="margin-top: 150px;">
@@ -37,36 +35,47 @@
             and start Learning Industrial Design in Azad University<br>
             i intrested in digital product design and some exprience on it that you can find <br> them in my reaserches
             <br>
-            im a good photographer too and have pretty graphic designs that you can see <br> in my portfolio</p>
+            im a good photographer too and have pretty graphic designs that you can see <br> in my portfolio
+        </p>
     </div>
-    <div id="left-box" style="margin-top: -10px;">
-        <h5 style="font-size: 41px;padding: 80px;font-family: Sans-serif;">Soft Skills</h5>
-        <ul style="margin-left: 80px;margin-top: -100px; font-size: 29px;line-height: 70px;font-family: Sans-serif;">
-            <li>responsible</li>
-            <li>Team Worker</li>
-            <li>Self-studier</li>
-            <li>Accepting Feedback</li>
-            <li>Decision Maker</li>
-            <li>Creative</li>
-            <li>Empathy</li>
-            <li>Researcher</li>
-            <li>Multitasking</li>
-        </ul>
+    <div class="skills">
+        <div class="skills-position">
+            <div id="skills-box">
+                <h5 style="font-size: 41px;padding: 80px;font-family: Sans-serif;">Soft Skills</h5>
+                <ul
+                    style="margin-left: 80px;margin-top: -100px; font-size: 29px;line-height: 70px;font-family: Sans-serif;">
+                    <li>responsible</li>
+                    <li>Team Worker</li>
+                    <li>Self-studier</li>
+                    <li>Accepting Feedback</li>
+                    <li>Decision Maker</li>
+                    <li>Creative</li>
+                    <li>Empathy</li>
+                    <li>Researcher</li>
+                    <li>Multitasking</li>
+                </ul>
+            </div>
+        </div>
+        <div class="skills-position">
+            <div id="skills-box">
+                <h5 style="font-size: 41px;padding: 80px;margin-top: 8px;font-family: Sans-serif;">Hard Skills</h5>
+                <ul
+                    style="margin-left: 80px;margin-top: -100px; font-size: 29px;line-height: 70px;font-family: Sans-serif;">
+                    <li>Material Design</li>
+                    <li>Front-End Development</li>
+                    <li>Fluent in Adobe Photoshop</li>
+                    <li>Fluent in Adobe XD</li>
+                    <li>Fluent in Sketch</li>
+                    <li>Fluent in Figma</li>
+                    <li>Well known about UCD</li>
+                    <li>Ux Reaserch</li>
+                    <li>Grpaphic Design</li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <div id="right-box">
-        <h5 style="font-size: 41px;padding: 80px;margin-top: 8px;font-family: Sans-serif;">Hard Skills</h5>
-        <ul style="margin-left: 80px;margin-top: -100px; font-size: 29px;line-height: 70px;font-family: Sans-serif;">
-            <li>Material Design</li>
-            <li>Front-End Development</li>
-            <li>Fluent in Adobe Photoshop</li>
-            <li>Fluent in Adobe XD</li>
-            <li>Fluent in Sketch</li>
-            <li>Fluent in Figma</li>
-            <li>Well known about UCD</li>
-            <li>Ux Reaserch</li>
-            <li>Grpaphic Design</li>
-        </ul>
-    </div>
+
+
     <div id="job-box">
         <h4 style="font-size: 41px; padding: 80px;font-family: Sans-serif;">Latest Experiences</h4>
         <p style="padding: 80px; font-size: 29px;line-height: 40px;margin-top: -170px;font-family: Sans-serif;">i joined
@@ -77,11 +86,14 @@
             style="float: right;margin-right:80px ;margin-top: -330px;font-family: Sans-serif;">
     </div>
     <h4 style="font-size: 30px;font-weight: 30;text-align: center;font-family: Sans-serif;">For more info
-        <span>gfhgh</span>about my experiences <a href="https://google.com"><b>Please read my CV</b></a></h4>
-    <img src="linkedin-smallest.png" alt="linkedin" style="margin-left: 570px;margin-top: 100px;">
-    <img src="insta-smallest.png" alt="insta" style="margin-left: 20px;">
-    <img src="behance-smallest.png" alt="behance" style="margin-left: 20px;">
-    <img src="dribbble-smallest.png" alt="dribbble" style="margin-left: 20px;">
+        <span>gfhgh</span>about my experiences <a href="https://google.com"><b>Please read my CV</b></a>
+    </h4>
+    <div class="link-pics">
+        <div class="link-position"><img src="linkedin-smallest.png" alt="linkedin"></div>
+        <div class="link-position"><img src="insta-smallest.png" alt="insta"></div>
+        <div class="link-position"><img src="behance-smallest.png" alt="behance"></div>
+        <div class="link-position"><img src="dribbble-smallest.png" alt="dribbble"></div>
+    </div>
 </body>
 
 </html>
