--- a/Contact.html
+++ b/Contact.html
@@ -1,26 +1,45 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Contact</title>
+    <title>Contact</title>
 </head>
 <link rel="stylesheet" href="box-style.css">
-<h3 style="margin-top: 50px;margin-left: 100px;font-family: Sans-serif;font-size: 22px;font-weight: bold;">Foad <br> Moghaddasi</h3> 
-<h1 style="margin-top: -70px;"><a href="Contact.html" style="margin-left: 1235px; margin-top: -100px;font-family: Sans-serif;font-size: 22px;font-weight: bolder;text-decoration: none;color: black;">Contact</a></h1>
-<h1 style="margin-top: -60px;"><a href="portfolio.html" style="margin-left: 1100px; margin-top: -100px;font-family: Sans-serif;font-size: 22px;font-weight: 30;text-decoration: none;color: black;">Portfolio</a></h1>
-<h1 style="margin-top: -60px;"><a href="index.html" style="margin-left: 980px;font-family: Sans-serif;font-size: 22px;font-weight: 30;text-decoration: none;color: black;">Home</a></h1>
-<h5 style="font-family: handly;text-align: left;font-size: 156px;margin-left: 22%;margin-top: 150px;">Hey<br>Whats up ??</h5>
+<div class="header">
+    <h3 id="foad-title">Foad<br>Moghaddasi</h3>
+    <div class="menu">
+        <a class="menu-item" href="Contact.html" id="contact-menue" style="background-color: black;color: white;border-radius: 20px;font-weight: bolder;">Contact</a>
+        <a class="menu-item" href="portfolio.html" id="Portfolio-menue">Portfolio</a>
+        <a class="menu-item" href="index.html" id="Home-menue">Home</a>
+    </div>
+</div>
+<h5 style="font-family: handly;text-align: left;font-size: 156px;margin-left: 22%;margin-top: 150px;">Hey<br>Whats up ??
+</h5>
+
 <body>
     <div id="email-box" style="margin-top: -100px;">
         <img src="email.png" alt="insta" style="text-align: center;padding: 35px;float: right;">
-        <h1 style="font-family: 30px; text-align: left;font-weight: bold;padding: 50px;font-family: Sans-serif;">Email</h1>
+        <h1 style="font-family: 30px; text-align: left;font-weight: bold;padding: 50px;font-family: Sans-serif;">Email
+        </h1>
     </div>
     <div id="email-box">
-        <img src="channel.png" alt="insta" style="text-align: center;padding: 25px;float: right;padding-right: 35px;font-family: Sans-serif;">
-        <h1 style="font-family: 30px; text-align: left;font-weight: bold;padding: 50px;font-family: Sans-serif;">Telegram Channel</h1>
+        <img src="channel.png" alt="insta"
+            style="text-align: center;padding: 25px;float: right;padding-right: 35px;font-family: Sans-serif;">
+        <h1 style="font-family: 30px; text-align: left;font-weight: bold;padding: 50px;font-family: Sans-serif;">
+            Telegram Channel</h1>
     </div>
     <div id="email-box">
-        <img src="linkedin-small.png" alt="insta" style="text-align: center;padding: 30px;float: right;padding-right: 35px;font-family: Sans-serif;">
-        <h1 style="font-family: 30px; text-align: left;font-weight: bold;padding: 50px;font-family: Sans-serif;">Linkedin</h1>
+        <img src="linkedin-small.png" alt="insta"
+            style="text-align: center;padding: 30px;float: right;padding-right: 35px;font-family: Sans-serif;">
+        <h1 style="font-family: 30px; text-align: left;font-weight: bold;padding: 50px;font-family: Sans-serif;">
+            Linkedin</h1>
+    </div>
+    <div class="link-pics">
+        <div class="link-position"><img src="linkedin-smallest.png" alt="linkedin" ></div>
+        <div class="link-position"><img src="insta-smallest.png" alt="insta" ></div>
+        <div class="link-position"><img src="behance-smallest.png" alt="behance" ></div>
+        <div class="link-position"><img src="dribbble-smallest.png" alt="dribbble" ></div>
     </div>
 </body>
+
 </html>
