--- a/portfolio.html
+++ b/portfolio.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>portfolio</title>
+    <title>portfolio</title>
 </head>
 <link rel="stylesheet" href="box-style.css">
-<h3 style="margin-top: 50px;margin-left: 100px;font-family: Sans-serif;font-size: 22px;font-weight: bold;">Foad <br> Moghaddasi</h3> 
-<h1 style="margin-top: -70px;"><a href="Contact.html" style="margin-left: 1235px; margin-top: -100px;font-family: Sans-serif;font-size: 22px;font-weight: 30;text-decoration: none;color: black;">Contact</a></h1>
-<h1 style="margin-top: -60px;"><a href="portfolio.html" style="margin-left: 1100px; margin-top: -100px;font-family: Sans-serif;font-size: 22px;font-weight: bolder;text-decoration: none;color: black;">Portfolio</a></h1>
-<h1 style="margin-top: -60px;"><a href="index.html" style="margin-left: 980px;font-family: Sans-serif;font-size: 22px;font-weight: 30;text-decoration: none;color: black;">Home</a></h1>
+<div class="header">
+    <h3 id="foad-title">Foad<br>Moghaddasi</h3>
+    <div class="menu">
+        <a class="menu-item" href="Contact.html" id="contact-menue">Contact</a>
+        <a class="menu-item" href="portfolio.html" id="Portfolio-menue"
+            style="background-color: black;color: white;border-radius: 20px;font-weight: bolder;">Portfolio</a>
+        <a class="menu-item" href="index.html" id="Home-menue">Home</a>
+    </div>
+</div>
 
 <body>
-<h1 style="font-size: 22px;text-align: center;margin-top: 100px;font-weight: 30;font-family: Sans-serif;">Just click on whichever you want</h1>
-<div id="insta-box" style="margin-left: 100px;margin-top: 75px;">
-    <img src="insta.png" alt="insta" style="text-align: center;padding: 62px;">
-    <h1 style="font-size: 22px;font-weight: bold;text-align: center;font-family: Sans-serif;">Instagram</h1>
-</div>
-<div id="link-box" style="margin-left: 540px;margin-top: -450px;">
-    <img src="linkedin.png" alt="linkedin" style="text-align: center;padding: 62px;">
-    <h1 style="font-size: 22px;font-weight: bold;text-align: center;font-family: Sans-serif;">linkedin</h1>
-</div>
-<div href="https://dribbble.com/fMoghaddasi" id="dribbble-box" style="float: right;margin-right: 100px;margin-top: -449px;">
-    <img src="dribbble.png" alt="dribbble" style="text-align: center;padding: 62px;">
-    <h1 style="font-size: 22px;font-weight: bold;text-align: center;font-family: Sans-serif;">Dribbble</h1>
-</div>
-<h1 style="text-align: center; font-size: 22px; font-weight: 30;margin-top: 50px;font-family: Sans-serif;">Here is some of my Product Designs</h1>
-    <img src="linkedin-smallest.png" alt="linkedin" style="margin-left: 570px;margin-top: 100px;">
-    <img src="insta-smallest.png" alt="insta" style="margin-left: 20px;">
-    <img src="behance-smallest.png" alt="behance" style="margin-left: 20px;">
-    <img src="dribbble-smallest.png" alt="dribbble" style="margin-left: 20px;">
+    <h1 id="just-click-style">Just click on whichever you want</h1>
+    <div class="box-align">
+        <div class="p-box">
+            <div id="insta-box">
+                <img src="insta.png" alt="insta" style="text-align: center;padding: 62px;">
+                <h1 style="font-size: 22px;font-weight: bold;text-align: center;font-family: Sans-serif;">Instagram</h1>
+            </div>
+        </div>
+        <div class="p-box">
+            <div id="link-box">
+                <img src="linkedin.png" alt="linkedin" style="text-align: center;padding: 62px;">
+                <h1 style="font-size: 22px;font-weight: bold;text-align: center;font-family: Sans-serif;">linkedin</h1>
+            </div>
+        </div>
+        <div class="p-box">
+            <div id="dribbble-box">
+                <img src="dribbble.png" alt="dribbble" style="text-align: center;padding: 62px;">
+                <h1 style="font-size: 22px;font-weight: bold;text-align: center;font-family: Sans-serif;">Dribbble</h1>
+            </div>
+        </div>
+    </div>
+
+    <h1 style="text-align: center; font-size: 22px; font-weight: 30;margin-top: 50px;font-family: Sans-serif;">Here is
+        some of my Product Designs</h1>
+    <div class="link-pics">
+        <div class="link-position"><img src="linkedin-smallest.png" alt="linkedin" ></div>
+        <div class="link-position"><img src="insta-smallest.png" alt="insta" ></div>
+        <div class="link-position"><img src="behance-smallest.png" alt="behance" ></div>
+        <div class="link-position"><img src="dribbble-smallest.png" alt="dribbble" ></div>
+    </div>
 </body>
