--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
 </div>
 
 <body>
-    <div id="box1" style="margin-top: 150px;">
+    <div id="box1">
         <img src="avatar.png" alt="avatar" style="float: right; padding: 70px;padding-right: 80px;">
-        <h4 style="margin-left: 80px;padding-top: 135px;font-size: 62px;font-family: Sans-serif;">Foad Moghaddasi</h4>
-        <h4 style="margin-left: 80px;margin-top: -65px;font-size: 31px;font-weight: 100;font-family: Sans-serif;">A
-            Junior Product Designer</h4>
-        <button class="button" style="margin-left: 80px;margin-top: -150px;font-family: Sans-serif;">CV</button>
-
+        <h4 id="foadmoghaddasi-inbox">Foad Moghaddasi</h4>
+        <h4 id="JuniorProductDesigner">A Junior Product Designer</h4>
+        <button class="button" id="cv-botton">CV</button>
     </div>
-    <div id="me-box" style="margin-top: 200px;">
-        <p style="font-size: 29px; padding: 80px; line-height: 42px;font-family: Sans-serif;">Hi
+    <div id="me-box">
+        <p id="aboutme-me-box">Hi
             im <br> Foad and Glad to see you here <br> im 22 years old and have study computer engineering for 3 years
             but beacous <br>
             i have learn what i want in frontend develpoment whit self studies i decided to<br> terminate education in
@@ -41,9 +39,8 @@
     <div class="skills">
         <div class="skills-position">
             <div id="skills-box">
-                <h5 style="font-size: 41px;padding: 80px;font-family: Sans-serif;">Soft Skills</h5>
-                <ul
-                    style="margin-left: 80px;margin-top: -100px; font-size: 29px;line-height: 70px;font-family: Sans-serif;">
+                <h1 id="skills-title">Soft Skills</h1>
+                <ul id="skills-list">
                     <li>responsible</li>
                     <li>Team Worker</li>
                     <li>Self-studier</li>
@@ -58,9 +55,8 @@
         </div>
         <div class="skills-position">
             <div id="skills-box">
-                <h5 style="font-size: 41px;padding: 80px;margin-top: 8px;font-family: Sans-serif;">Hard Skills</h5>
-                <ul
-                    style="margin-left: 80px;margin-top: -100px; font-size: 29px;line-height: 70px;font-family: Sans-serif;">
+                <h1 id="skills-title">Hard Skills</h1>
+                <ul id="skills-list">
                     <li>Material Design</li>
                     <li>Front-End Development</li>
                     <li>Fluent in Adobe Photoshop</li>
@@ -77,17 +73,15 @@
 
 
     <div id="job-box">
-        <h4 style="font-size: 41px; padding: 80px;font-family: Sans-serif;">Latest Experiences</h4>
-        <p style="padding: 80px; font-size: 29px;line-height: 40px;margin-top: -170px;font-family: Sans-serif;">i joined
+        <h1 id="Latest-Experiences">Latest Experiences</h1>
+        <p id="Exp-paragraph">i joined
             jabama in April 2021 as Employee Experienc Specialist<br>
-            my main duty is design the best experiene for our employees and make<br>
+            my main duty is design the best experiene for our employees and make
             them a good life in Jabama</p>
-        <img src="Jabama-Logo.png" alt="jabama"
-            style="float: right;margin-right:80px ;margin-top: -330px;font-family: Sans-serif;">
+        <img src="Jabama-Logo.png" alt="jabama" id="jabama-logo">
     </div>
-    <h4 style="font-size: 30px;font-weight: 30;text-align: center;font-family: Sans-serif;">For more info
-        <span>gfhgh</span>about my experiences <a href="https://google.com"><b>Please read my CV</b></a>
-    </h4>
+    <p id="for-more-info">For more info about my experiences <br><a href="https://google.com"><b>Please read my CV</b></a>
+    </p>
     <div class="link-pics">
         <div class="link-position"><img src="linkedin-smallest.png" alt="linkedin"></div>
         <div class="link-position"><img src="insta-smallest.png" alt="insta"></div>
