--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>portfolio</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 <link rel="stylesheet" href="box-style.css">
 <div class="header">
