--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
 <div class="header">
     <h3 id="foad-title">Foad<br>Moghaddasi</h3>
     <div class="menu">
-        <a class="menu-item" href="Contact.html" id="contact-menue" style="background-color: black;color: white;border-radius: 20px;font-weight: bolder;">Contact</a>
+        <a class="menu-item" href="Contact.html" id="contact-menue" style="background-color: black;color: white;border-radius: 20px;">Contact</a>
         <a class="menu-item" href="portfolio.html" id="Portfolio-menue">Portfolio</a>
         <a class="menu-item" href="index.html" id="Home-menue">Home</a>
     </div>
