--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="box-style.css">
 
 <div class="header">
-    <h3 id="foad-title">Foad<br>Moghaddasi</h3>
+    <h1 id="foad-title">Foad<br>Moghaddasi</h1>
     <div class="menu">
         <a class="menu-item" href="Contact.html" id="contact-menue">Contact</a>
         <a class="menu-item" href="portfolio.html" id="Portfolio-menue">Portfolio</a>
@@ -19,7 +19,7 @@
 
 <body>
     <div id="box1">
-        <img src="avatar.png" alt="avatar" style="float: right; padding: 70px;padding-right: 80px;">
+        <img src="avatar.png" alt="avatar" id="avatar">
         <h4 id="foadmoghaddasi-inbox">Foad Moghaddasi</h4>
         <h4 id="JuniorProductDesigner">A Junior Product Designer</h4>
         <button class="button" id="cv-botton">CV</button>
