--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <div class="menu">
         <a class="menu-item" href="Contact.html" id="contact-menue">Contact</a>
         <a class="menu-item" href="portfolio.html" id="Portfolio-menue"
-            style="background-color: black;color: white;border-radius: 20px;font-weight: bolder;">Portfolio</a>
+            style="background-color: black;color: white;border-radius: 20px;">Portfolio</a>
         <a class="menu-item" href="index.html" id="Home-menue">Home</a>
     </div>
 </div>
