--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
     </div>
     <div id="me-box">
         <p id="aboutme-me-box">Hi
-            im <br> Foad and Glad to see you here <br> im 22 years old and have study computer engineering for 3 years
-            but beacous <br>
-            i have learn what i want in frontend develpoment whit self studies i decided to<br> terminate education in
+            im Foad <br> and Glad to see you here im 22 years old and have study computer engineering for 3 years
+            but beacous 
+            i have learn what i want in frontend develpoment whit self studies i decided to terminate education in
             CE
-            and start Learning Industrial Design in Azad University<br>
-            i intrested in digital product design and some exprience on it that you can find <br> them in my reaserches
-            <br>
-            im a good photographer too and have pretty graphic designs that you can see <br> in my portfolio
+            and start Learning Industrial Design in Azad University
+            i intrested in digital product design and some exprience on it that you can find  them in my reaserches
+            im a good photographer too and have pretty graphic designs that you can see  in my portfolio
         </p>
     </div>
     <div class="skills">
@@ -59,10 +58,10 @@
                 <ul id="skills-list">
                     <li>Material Design</li>
                     <li>Front-End Development</li>
-                    <li>Fluent in Adobe Photoshop</li>
-                    <li>Fluent in Adobe XD</li>
-                    <li>Fluent in Sketch</li>
-                    <li>Fluent in Figma</li>
+                    <li>Adobe Photoshop</li>
+                    <li>Adobe XD</li>
+                    <li>Sketch</li>
+                    <li>Figma</li>
                     <li>Well known about UCD</li>
                     <li>Ux Reaserch</li>
                     <li>Grpaphic Design</li>
@@ -73,12 +72,13 @@
 
 
     <div id="job-box">
+        <img src="Jabama-Logo.png" alt="jabama" id="jabama-logo">
         <h1 id="Latest-Experiences">Latest Experiences</h1>
         <p id="Exp-paragraph">i joined
             jabama in April 2021 as Employee Experienc Specialist<br>
             my main duty is design the best experiene for our employees and make
             them a good life in Jabama</p>
-        <img src="Jabama-Logo.png" alt="jabama" id="jabama-logo">
+        
     </div>
     <p id="for-more-info">For more info about my experiences <br><a href="https://google.com"><b>Please read my CV</b></a>
     </p>
