--- a/Contact.html
+++ b/Contact.html
@@ -9,38 +9,34 @@
 <div class="header">
     <h3 id="foad-title">Foad<br>Moghaddasi</h3>
     <div class="menu">
-        <a class="menu-item" href="Contact.html" id="contact-menue" style="background-color: black;color: white;border-radius: 20px;">Contact</a>
-        <a class="menu-item" href="portfolio.html" id="Portfolio-menue">Portfolio</a>
         <a class="menu-item" href="index.html" id="Home-menue">Home</a>
+        <a class="menu-item" href="portfolio.html" id="Portfolio-menue">Portfolio</a>
+        <a class="menu-item" href="Contact.html" id="contact-menue"
+            style="background-color: black;color: white;border-radius: 20px;">Contact</a>
     </div>
 </div>
-<h5 style="font-family: handly;text-align: left;font-size: 156px;margin-left: 22%;margin-top: 150px;">Hey<br>Whats up ??
+<h5 id="whatsup">Hey<br>Whats up ??
 </h5>
 
 <body>
     <div id="email-box" style="margin-top: -100px;">
         <img src="email.png" alt="insta" style="text-align: center;padding: 35px;float: right;">
-        <h1 style="font-family: 30px; text-align: left;font-weight: bold;padding: 50px;font-family: Sans-serif;">Email
+        <h1 id="con-email">Email
         </h1>
     </div>
     <div id="email-box">
         <img src="channel.png" alt="insta"
             style="text-align: center;padding: 25px;float: right;padding-right: 35px;font-family: Sans-serif;">
-        <h1 style="font-family: 30px; text-align: left;font-weight: bold;padding: 50px;font-family: Sans-serif;">
+        <h1 id="con-tele">
             Telegram Channel</h1>
     </div>
     <div id="email-box">
         <img src="linkedin-small.png" alt="insta"
             style="text-align: center;padding: 30px;float: right;padding-right: 35px;font-family: Sans-serif;">
-        <h1 style="font-family: 30px; text-align: left;font-weight: bold;padding: 50px;font-family: Sans-serif;">
+        <h1 id="con-link">
             Linkedin</h1>
     </div>
-    <div class="link-pics">
-        <div class="link-position"><img src="linkedin-smallest.png" alt="linkedin" ></div>
-        <div class="link-position"><img src="insta-smallest.png" alt="insta" ></div>
-        <div class="link-position"><img src="behance-smallest.png" alt="behance" ></div>
-        <div class="link-position"><img src="dribbble-smallest.png" alt="dribbble" ></div>
-    </div>
+    <p id="copyright">2021 Foad Moghaddasi All Rights Reserved</p>
 </body>
 
 </html>
