--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <div class="header">
     <h1 id="foad-title">Foad<br>Moghaddasi</h1>
     <div class="menu">
-        <a class="menu-item" href="Contact.html" id="contact-menue">Contact</a>
-        <a class="menu-item" href="portfolio.html" id="Portfolio-menue">Portfolio</a>
         <a class="menu-item" href="index.html" id="Home-menue">Home</a>
+        <a class="menu-item" href="portfolio.html" id="Portfolio-menue">Portfolio</a>
+        <a class="menu-item" href="Contact.html" id="contact-menue">Contact</a>
     </div>
 </div>
 
@@ -88,6 +88,7 @@
         <div class="link-position"><img src="behance-smallest.png" alt="behance"></div>
         <div class="link-position"><img src="dribbble-smallest.png" alt="dribbble"></div>
     </div>
+    <p id="copyright">2021 Foad Moghaddasi All Rights Reserved</p>
 </body>
 
 </html>
