--- a/portfolio.html
+++ b/portfolio.html
@@ -9,10 +9,9 @@
 <div class="header">
     <h3 id="foad-title">Foad<br>Moghaddasi</h3>
     <div class="menu">
-        <a class="menu-item" href="Contact.html" id="contact-menue">Contact</a>
-        <a class="menu-item" href="portfolio.html" id="Portfolio-menue"
-            style="background-color: black;color: white;border-radius: 20px;">Portfolio</a>
         <a class="menu-item" href="index.html" id="Home-menue">Home</a>
+        <a class="menu-item" href="portfolio.html" id="Portfolio-menue" style="background-color: black;color: white;border-radius: 20px;">Portfolio</a>
+        <a class="menu-item" href="Contact.html" id="contact-menue">Contact</a>
     </div>
 </div>
 
@@ -44,4 +43,5 @@
         <div class="link-position"><img src="behance-smallest.png" alt="behance" ></div>
         <div class="link-position"><img src="dribbble-smallest.png" alt="dribbble" ></div>
     </div>
+    <p id="copyright">2021 Foad Moghaddasi All Rights Reserved</p>
 </body>
