--- a/Contact.html
+++ b/Contact.html
@@ -20,19 +20,17 @@
 
 <body>
     <div id="email-box" style="margin-top: -100px;">
-        <img src="email.png" alt="insta" style="text-align: center;padding: 35px;float: right;">
+        <img src="email.png" alt="insta" id="email-icon">
         <h1 id="con-email">Email
         </h1>
     </div>
     <div id="email-box">
-        <img src="channel.png" alt="insta"
-            style="text-align: center;padding: 25px;float: right;padding-right: 35px;font-family: Sans-serif;">
+        <img src="channel.png" alt="telegram" id="tele-icon">
         <h1 id="con-tele">
             Telegram Channel</h1>
     </div>
     <div id="email-box">
-        <img src="linkedin-small.png" alt="insta"
-            style="text-align: center;padding: 30px;float: right;padding-right: 35px;font-family: Sans-serif;">
+        <img src="linkedin-small.png" alt="insta" id="link-icon">
         <h1 id="con-link">
             Linkedin</h1>
     </div>
