--- a/Contact.html
+++ b/Contact.html
@@ -19,17 +19,17 @@
 </h5>
 
 <body>
-    <div id="email-box" style="margin-top: -100px;">
+    <div onclick="location.href='https://moghadasi.foad@gmail.com';" id="email-box" style="margin-top: -100px;">
         <img src="email.png" alt="insta" id="email-icon">
         <h1 id="con-email">Email
         </h1>
     </div>
-    <div id="email-box">
+    <div onclick="location.href='https://t.me/desiignclub';" id="email-box">
         <img src="channel.png" alt="telegram" id="tele-icon">
         <h1 id="con-tele">
             Telegram Channel</h1>
     </div>
-    <div id="email-box">
+    <div onclick="location.href='https://www.linkedin.com/in/foadmoghaddasi';" id="email-box">
         <img src="linkedin-small.png" alt="insta" id="link-icon">
         <h1 id="con-link">
             Linkedin</h1>
