--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,8 @@
     <h3 id="foad-title">Foad<br>Moghaddasi</h3>
     <div class="menu">
         <a class="menu-item" href="index.html" id="Home-menue">Home</a>
-        <a class="menu-item" href="portfolio.html" id="Portfolio-menue" style="background-color: black;color: white;border-radius: 20px;">Portfolio</a>
+        <a class="menu-item" href="portfolio.html" id="Portfolio-menue"
+            style="background-color: black;color: white;border-radius: 20px;">Portfolio</a>
         <a class="menu-item" href="Contact.html" id="contact-menue">Contact</a>
     </div>
 </div>
@@ -19,29 +20,29 @@
     <h1 id="just-click-style">Just click on whichever you want</h1>
     <div class="box-align">
         <div class="p-box">
-            <div id="insta-box">
+            <div onclick="location.href='https://www.instagram.com/foadmoghaddasi/';" id="insta-box">
                 <img src="insta.png" alt="insta" style="text-align: center;padding: 62px;">
                 <h1 style="font-size: 22px;font-weight: bold;text-align: center;font-family: Sans-serif;">Instagram</h1>
             </div>
         </div>
         <div class="p-box">
-            <div id="link-box">
+            <div onclick="location.href='https://www.linkedin.com/in/foadmoghaddasi';" id="link-box">
                 <img src="linkedin.png" alt="linkedin" style="text-align: center;padding: 62px;">
                 <h1 style="font-size: 22px;font-weight: bold;text-align: center;font-family: Sans-serif;">linkedin</h1>
             </div>
         </div>
         <div class="p-box">
-            <div id="dribbble-box">
+            <div onclick="location.href='https://dribbble.com/fMoghaddasi';" id="dribbble-box">
                 <img src="dribbble.png" alt="dribbble" style="text-align: center;padding: 62px;">
                 <h1 style="font-size: 22px;font-weight: bold;text-align: center;font-family: Sans-serif;">Dribbble</h1>
             </div>
         </div>
     </div>
     <div class="link-pics">
-        <div class="link-position"><img src="linkedin-smallest.png" alt="linkedin" ></div>
-        <div class="link-position"><img src="insta-smallest.png" alt="insta" ></div>
-        <div class="link-position"><img src="behance-smallest.png" alt="behance" ></div>
-        <div class="link-position"><img src="dribbble-smallest.png" alt="dribbble" ></div>
+        <div class="link-position"><img src="linkedin-smallest.png" alt="linkedin"></div>
+        <div class="link-position"><img src="insta-smallest.png" alt="insta"></div>
+        <div class="link-position"><img src="behance-smallest.png" alt="behance"></div>
+        <div class="link-position"><img src="dribbble-smallest.png" alt="dribbble"></div>
     </div>
     <p id="copyright">2021 Foad Moghaddasi All Rights Reserved</p>
 </body>
