--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="link-position"><img src="behance-smallest.png" alt="behance"></div>
         <div class="link-position"><img src="dribbble-smallest.png" alt="dribbble"></div>
     </div>
-    <p id="copyright">2021 Foad Moghaddasi All Rights Reserved</p>
+    <p id="copyright">Designed and Performed By Foad Moghaddasi<br>2021 All Rights Reserved</p>
 </body>
 
 </html>
