--- a/Contact.html
+++ b/Contact.html
@@ -34,7 +34,6 @@
         <h1 id="con-link">
             Linkedin</h1>
     </div>
-    <p id="copyright">2021 Foad Moghaddasi All Rights Reserved</p>
+    <p id="copyright">Designed and Performed By Foad Moghaddasi<br>2021 All Rights Reserved</p>
 </body>
-
 </html>
