--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="avatar.png" alt="avatar" id="avatar">
         <h4 id="foadmoghaddasi-inbox">Foad Moghaddasi</h4>
         <h4 id="JuniorProductDesigner">A Junior Product Designer</h4>
-        <button class="button" id="cv-botton" onclick="location.href='https://github.com/foadmoghaddasi/foadmoghaddasi.github.io/blob/main/CV.pdf';">CV</button>
+        <button class="button" id="cv-botton" onclick="location.href='CV.pdf';">CV</button>
     </div>
     <div id="me-box">
         <p id="aboutme-me-box">Hi
