--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         <button class="button" id="cv-botton" onclick="location.href='CV.pdf';">CV</button>
     </div>
     <div id="me-box">
-        <p id="aboutme-me-box">Hi
-            im Foad <br> and Glad to see you here im 22 years old and have study computer engineering for 3 years
-            but beacous 
-            i have learn what i want in frontend develpoment whit self studies i decided to terminate education in
-            CE
-            and start Learning Industrial Design in Azad University
-            i intrested in digital product design and some exprience on it that you can find  them in my reaserches
-            im a good photographer too and have pretty graphic designs that you can see  in my portfolio
+        <p id="aboutme-me-box"> Hi I'm Foad <br> and Glad to see you here, I'm 22 and have studied computer engineering
+            for 3 years
+            but because I've learned what I want in Frontend development by self-studies and find my path to be a
+            product designer, I decided to
+            terminate my education in CE and start Learning Industrial Design at Azad University.
+            I'm fully interested in digital product design and I've some experience in it that you can find in my
+            dribbble. I've pretty graphic
+            designs that you can see in my portfolio...
         </p>
     </div>
     <div class="skills">
@@ -40,7 +40,7 @@
             <div id="skills-box">
                 <h1 id="skills-title">Soft Skills</h1>
                 <ul id="skills-list">
-                    <li>responsible</li>
+                    <li>Responsible</li>
                     <li>Team Worker</li>
                     <li>Self-studier</li>
                     <li>Accepting Feedback</li>
@@ -74,13 +74,12 @@
     <div id="job-box">
         <img src="Jabama-Logo.png" alt="jabama" id="jabama-logo">
         <h1 id="Latest-Experiences">Latest Experiences</h1>
-        <p id="Exp-paragraph">i joined
-            jabama in April 2021 as Employee Experienc Specialist<br>
-            my main duty is design the best experiene for our employees and make
-            them a good life in Jabama</p>
-        
+        <p id="Exp-paragraph">I joined jabama in April 2021 as an Employee Experience Designer<br>
+            my main duty is to design the best experience for our employees and make them a good life in Jabama ...</p>
+
     </div>
-    <p id="for-more-info">For more info about my experiences <br><a href="https://google.com"><b>Please read my CV</b></a>
+    <p id="for-more-info">For more info about my experiences <br><a href="https://google.com"><b>Please read my
+                CV</b></a>
     </p>
     <div class="link-pics">
         <div class="link-position"><img src="linkedin-smallest.png" alt="linkedin"></div>
