--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
         <button class="button" id="cv-botton" onclick="location.href='CV.pdf';">CV</button>
     </div>
     <div id="me-box">
-        <p id="aboutme-me-box"> Hi I'm Foad <br> and Glad to see you here, I'm 22 and have studied computer engineering
-            for 3 years
-            but because I've learned what I want in Frontend development by self-studies and find my path to be a
+        <p id="aboutme-me-box"> Hi I'm Foad <br> and Glad to see you here<br> I'm 22 and have studied computer engineering
+            for 3 years but because I've learned what I want in Frontend development by self-studies and find my path to be a
             product designer, I decided to
-            terminate my education in CE and start Learning Industrial Design at Azad University.
+            terminate my education in CE and start Learning Industrial Design at Azad University.<br>
             I'm fully interested in digital product design and I've some experience in it that you can find in my
             dribbble. I've pretty graphic
             designs that you can see in my portfolio...
