--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             my main duty is to design the best experience for our employees and make them a good life in Jabama ...</p>
 
     </div>
-    <p id="for-more-info">For more info about my experiences <br><a href="https://google.com"><b>Please read my
+    <p id="for-more-info">For more info about my experiences <br><a href="CV.pdf"><b>Please read my
                 CV</b></a>
     </p>
     <div class="link-pics">
