--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
         <button class="button" id="cv-botton" onclick="location.href='CV.pdf';">CV</button>
     </div>
     <div id="me-box">
-        <p id="aboutme-me-box"> Hi I'm Foad <br> and Glad to see you here<br> I'm 22 and have studied computer engineering
-            for 3 years but because I've learned what I want in Frontend development by self-studies and find my path to be a
-            product designer, I decided to
-            terminate my education in CE and start Learning Industrial Design at Azad University.<br>
-            I'm fully interested in digital product design and I've some experience in it that you can find in my
-            dribbble. I've pretty graphic
-            designs that you can see in my portfolio...
+        <p id="aboutme-me-box">Hi, I'm Foad :) <br> Glad to see you here.<br> I'm 22 and have studied computer
+            engineering for 3 years. But, because i've learned what i want in Front-end development by self-studies,
+            and find my path to be a product designer, I decided to terminate my education in CE and start learning
+            Industrial Design at Azad University.<br>
+            I'm fully interested in digital product design, and i've some experience in it that you can find in my 
+            dribbble portfolio.
         </p>
     </div>
     <div class="skills">
