--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 
 <head>
+    <style>
+        body {
+          background-color: #E3E6EC;
+        }
+        </style>
+        
     <title>Foad Moghaddasi</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
@@ -19,10 +25,11 @@
 
 <body>
     <div id="box1">
+        
         <img src="avatar.png" alt="avatar" id="avatar">
         <h4 id="foadmoghaddasi-inbox">Foad Moghaddasi</h4>
         <h4 id="JuniorProductDesigner">A Junior Product Designer</h4>
-        <button class="button" id="cv-botton" onclick="location.href='CV.pdf';">CV</button>
+        <button class="button" id="cv-botton" onclick="location.href='CV.pdf';">Download CV</button>
     </div>
     <div id="me-box">
         <p id="aboutme-me-box">Hi, I'm Foad :) <br> Glad to see you here.<br> I'm 22 and have studied computer
