--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,11 @@
 <html>
 
 <head>
+    <style>
+        body {
+          background-color: #E3E6EC;
+        }
+        </style>
     <title>portfolio</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
@@ -11,7 +16,9 @@
     <div class="menu">
         <a class="menu-item" href="index.html" id="Home-menue">Home</a>
         <a class="menu-item" href="portfolio.html" id="Portfolio-menue"
-            style="background-color: black;color: white;border-radius: 20px;">Portfolio</a>
+            style="box-shadow: inset 0px 0px 10px 5px #D1D9E9;
+            background-color:#E3E6EC;
+            color: #b1b8b9; border-radius: 20px;">Portfolio</a>
         <a class="menu-item" href="Contact.html" id="contact-menue">Contact</a>
     </div>
 </div>
