--- a/Contact.html
+++ b/Contact.html
@@ -2,6 +2,11 @@
 <html>
 
 <head>
+    <style>
+        body {
+          background-color: #E3E6EC;
+        }
+        </style>
     <title>Contact</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
@@ -12,7 +17,9 @@
         <a class="menu-item" href="index.html" id="Home-menue">Home</a>
         <a class="menu-item" href="portfolio.html" id="Portfolio-menue">Portfolio</a>
         <a class="menu-item" href="Contact.html" id="contact-menue"
-            style="background-color: black;color: white;border-radius: 20px;">Contact</a>
+            style="box-shadow: inset 0px 0px 10px 5px #D1D9E9;
+            background-color:#E3E6EC;
+            color: #b1b8b9; border-radius: 20px;">Contact</a>
     </div>
 </div>
 <h5 id="whatsup">Hey<br>Whats up ??
