--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
 
 <body>
     <div id="box1">
-        
         <img src="avatar.png" alt="avatar" id="avatar">
         <h4 id="foadmoghaddasi-inbox">Foad Moghaddasi</h4>
-        <h4 id="JuniorProductDesigner">A Junior Product Designer</h4>
+        <h4 id="JuniorProductDesigner">Product Designer</h4>
         <button class="button" id="cv-botton" onclick="location.href='CV.pdf';">Download CV</button>
     </div>
     <div id="me-box">
