--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="assets/css/super-classes.css">
       <link rel="stylesheet" href="assets/css/style.css">
       <link rel="stylesheet" href="assets/css/mobile.css">
-      <title>Folio flix | Home</title>
+      <title>Foad Moghaddasi</title>
       <script type="text/javascript">
          (function(c,l,a,r,i,t,y){
              c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
