--- a/index.html
+++ b/index.html
@@ -1211,13 +1211,13 @@
                         <div class="footer-social-icon mb-0">
                            <ul>
                               <li class="d-inline-block">
-                                 <a href="https://www.behance.net/"><i class="fab fa-behance d-flex align-items-center justify-content-center"></i></a>
+                                 <a href="https://www.instagram.com/foadmoghaddasi"><i class="fab fa-instagram d-flex align-items-center justify-content-center"></i></a>
                               </li>
                               <li class="d-inline-block">
-                                 <a href="https://dribbble.com/"><i class="fab fa-dribbble d-flex align-items-center justify-content-center"></i></a>
+                                 <a href="https://dribbble.com/fMoghaddasi"><i class="fab fa-dribbble d-flex align-items-center justify-content-center"></i></a>
                               </li>
                               <li class="d-inline-block">
-                                 <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in d-flex align-items-center justify-content-center"></i></a>
+                                 <a href="www.linkedin.com/in/foadmoghaddasi"><i class="fab fa-linkedin-in d-flex align-items-center justify-content-center"></i></a>
                               </li>
                            </ul>
                         </div>
