--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                   <div class="footer-social-icon banner-social-icon mb-0">
                      <ul class="mb-0 list-unstyled">
                         <li class="">
-                           <a href="https://www.behance.net/"><i class="fab fa-behance d-flex align-items-center justify-content-center"></i></a>
+                           <a href="https://https://t.me/foaduix"><i class="fab fa-telegram d-flex align-items-center justify-content-center"></i></a>
                         </li>
                         <li class="mt-3 mb-3">
-                           <a href="https://dribbble.com/"><i class="fab fa-dribbble d-flex align-items-center justify-content-center ml-0 mr-0 "></i></a>
+                           <a href="https://dribbble.com/fMoghaddasi"><i class="fab fa-dribbble d-flex align-items-center justify-content-center ml-0 mr-0 "></i></a>
                         </li>
                         <li class="">
-                           <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in d-flex align-items-center justify-content-center"></i></a>
+                           <a href="www.linkedin.com/in/foadmoghaddasi"><i class="fab fa-linkedin-in d-flex align-items-center justify-content-center"></i></a>
                         </li>
                      </ul>
                   </div>
@@ -712,13 +712,13 @@
                <div class="footer-social-icon">
                   <ul class="mb-0">
                      <li class="d-inline-block">
-                        <a href="https://instagram.com/foadmoghaddasi?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram d-flex align-items-center justify-content-center"></i></a>
+                        <a href="https://instagram.com/foadmoghaddasi"><i class="fab fa-instagram d-flex align-items-center justify-content-center"></i></a>
                      </li>
                      <li class="d-inline-block">
-                        <a href="https://dribbble.com/"><i class="fab fa-dribbble d-flex align-items-center justify-content-center"></i></a>
+                        <a href="https://dribbble.com/fMoghaddasi"><i class="fab fa-dribbble d-flex align-items-center justify-content-center"></i></a>
                      </li>
                      <li class="d-inline-block">
-                        <a href="https://www.linkedin.com/"><i class="fab fa-linkedin-in d-flex align-items-center justify-content-center"></i></a>
+                        <a href="www.linkedin.com/in/foadmoghaddasi"><i class="fab fa-linkedin-in d-flex align-items-center justify-content-center"></i></a>
                      </li>
                   </ul>
                </div>
