--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <div class="footer-social-icon banner-social-icon mb-0">
                      <ul class="mb-0 list-unstyled">
                         <li class="">
-                           <a href="https://https://t.me/foaduix"><i class="fab fa-telegram d-flex align-items-center justify-content-center"></i></a>
+                           <a href="https://t.me/foaduix"><i class="fab fa-telegram d-flex align-items-center justify-content-center"></i></a>
                         </li>
                         <li class="mt-3 mb-3">
                            <a href="https://dribbble.com/fMoghaddasi"><i class="fab fa-dribbble d-flex align-items-center justify-content-center ml-0 mr-0 "></i></a>
