--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                   <div class="header-con">
                      <nav class="navbar navbar-expand-lg navbar-light p-0">
                         <a class="navbar-brand p-0" href="index.html">
-                        <img src="assets/image/Header Logo.png" alt="logo-img" class="img-fluid">
+                        <img src="assets/image/header-logo.png" alt="logo-img" class="img-fluid">
                         </a>
                         <button class="navbar-toggler p-0 collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
