--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
                               <div class="best-award-con d-inline-block wow bounceInUp" data-wow-duration="1s" data-wow-delay="1s">
                                  <div class="best-award-inner-con">
                                     <figure class="mb-0">
-                                       <img src="assets/image/cup-img.png" alt="cup-img" class="img-fluid">
+                                       <img src="assets/image/pd-logo.png" alt="cup-img" class="img-fluid">
                                     </figure>
                                     <div class="best-award-title">
-                                       <p class="mb-0">Best Design<br>
-                                          Award.
+                                       <p class="mb-0">Product Designer at<br>
+                                          Pulse Design Agency
                                        </p>
                                     </div>
                                  </div>
@@ -125,10 +125,10 @@
                                        <img src="assets/image/admin-icon.png" alt="admin-icon" class="img-fluid">
                                     </figure>
                                     <div class="best-award-title d-inline-block ml-0">
-                                       <p class="mb-0 d-inline-block count">4</p>
-                                       <p class="mb-0 d-inline-block">k+</p>
-                                       <span class="d-block">Happy<br>
-                                       Customers</span>
+                                       <p class="mb-0 d-inline-block count">+5</p>
+                                       <p class="mb-0 d-inline-block">years</p>
+                                       <span class="d-block">Design<br>
+                                       Experience</span>
                                     </div>
                                  </div>
                               </div>
