--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                                        <img src="assets/image/admin-icon.png" alt="admin-icon" class="img-fluid">
                                     </figure>
                                     <div class="best-award-title d-inline-block ml-0">
-                                       <p class="mb-0 d-inline-block count">+5</p>
-                                       <p class="mb-0 d-inline-block">years</p>
+                                       <p class="mb-0 d-inline-block count">5</p>
+                                       <p class="mb-0 d-inline-block">years +</p>
                                        <span class="d-block">Design<br>
                                        Experience</span>
                                     </div>
