--- a/index.html
+++ b/index.html
@@ -107,10 +107,11 @@
                               <figure class="mb-0">
                                  <img src="assets/image/foad-banner.png" alt="banner-right-img" id="banner-right-img">
                               </figure>
-                              <div class="best-award-con d-inline-block wow bounceInUp" data-wow-duration="1s" data-wow-delay="1s">
+                              <a href="https://pulsedesign.ir/">
+                              <div class="best-award-con d-inline-block wow bounceInUp"  data-wow-duration="1s" data-wow-delay="1s">
                                  <div class="best-award-inner-con">
                                     <figure class="mb-0">
-                                       <img src="assets/image/pd-logo.png" alt="cup-img" class="img-fluid">
+                                       <img src="assets/image/pd-logo.png"  alt="cup-img" class="img-fluid">
                                     </figure>
                                     <div class="best-award-title">
                                        <p class="mb-0">Product Designer at<br>
@@ -119,6 +120,7 @@
                                     </div>
                                  </div>
                               </div>
+                           </a>
                               <div class="best-award-con d-inline-block happy-con wow bounceInUp " data-wow-duration="1s" data-wow-delay="1s">
                                  <div class="best-award-inner-con text-center">
                                     <figure>
@@ -165,7 +167,7 @@
                               <h4>Ui/Ux Design</h4>
                               <p>We will design your product according to the environment in which you operate and the users who are going to use it.
                               </p>
-                              <a href="#" data-toggle="modal" data-target="#Ui-Design">Read More</a>
+                              <!-- <a href="#" data-toggle="modal" data-target="#Ui-Design">Read More</a> -->
                            </div>
                         </div>
                      </div>
@@ -178,7 +180,7 @@
                               <h4>Product re-Design</h4>
                               <p>If you are not satisfied with the design or user experience of your product, feel free to let us redesign it.
                               </p>
-                              <a href="#" data-toggle="modal" data-target="#web-design">Read More</a>
+                              <!-- <a href="#" data-toggle="modal" data-target="#web-design">Read More</a> -->
                            </div>
                         </div>
                      </div>
@@ -193,7 +195,7 @@
                               <h4>Product Consultation</h4>
                               <p>If you need friendly advice in the field of  your website or application Ui and Ux design, just contact us.
                               </p>
-                              <a href="#" data-toggle="modal" data-target="#web-development">Read More</a>
+                              <!-- <a href="#" data-toggle="modal" data-target="#web-development">Read More</a> -->
                            </div>
                         </div>
                      </div>
@@ -206,7 +208,7 @@
                               <h4>Figma Training</h4>
                               <p>If you are interested in product design with Figma, you can receive online private training sessions by filling out the contact form.
                               </p>
-                              <a href="#" data-toggle="modal" data-target="#app-development">Read More</a>
+                              <!-- <a href="#" data-toggle="modal" data-target="#app-development">Read More</a> -->
                            </div>
                         </div>
                      </div>
@@ -375,7 +377,7 @@
                   <a href="#" data-toggle="modal" data-target="#modalWPWAF">
                      <div class="portfolio-img position-relative">
                         <figure>
-                           <img src="assets/image/portfolio-img1.png" alt="portfolio-img1" class="img-fluid"> 
+                           <img src="assets/image/111.webp" alt="portfolio-img1" class="img-fluid"> 
                         </figure>
                      </div>
                   </a>
@@ -394,7 +396,7 @@
                   <a href="#" data-toggle="modal" data-target="#modalporfolio2">
                      <div class="portfolio-img position-relative">
                         <figure>
-                           <img src="assets/image/portfolio-img2.png" alt="portfolio-img1" class="img-fluid"> 
+                           <img src="assets/image/222.webp" alt="portfolio-img1" class="img-fluid"> 
                         </figure>
                      </div>
                   </a>
@@ -413,7 +415,7 @@
                   <a href="#" data-toggle="modal" data-target="#modalporfolio3">
                      <div class="portfolio-img position-relative">
                         <figure>
-                           <img src="assets/image/portfolio-img3.png" alt="portfolio-img1" class="img-fluid"> 
+                           <img src="assets/image/333.webp" alt="portfolio-img1" class="img-fluid"> 
                         </figure>
                      </div>
                   </a>
@@ -430,7 +432,7 @@
                   <a href="#" data-toggle="modal" data-target="#modalporfolio4">
                      <div class="portfolio-img position-relative">
                         <figure>
-                           <img src="assets/image/portfolio-img4.png" alt="portfolio-img1" class="img-fluid"> 
+                           <img src="assets/image/444.webp" alt="portfolio-img1" class="img-fluid"> 
                         </figure>
                      </div>
                   </a>
@@ -442,12 +444,13 @@
                   <a href="#" class="float-lg-right" data-toggle="modal" data-target="#modalporfolio4-icon"><i class="fas fa-arrow-right d-flex align-items-center justify-content-center"></i></a>
                   </div>
                   
+                  
                </div>
                <div class="filterDiv cars animals position-relative">
                   <a href="#" data-toggle="modal" data-target="#modalporfolio5">
                      <div class="portfolio-img position-relative">
                         <figure>
-                           <img src="assets/image/portfolio-img5.png" alt="portfolio-img1" class="img-fluid"> 
+                           <img src="assets/image/555.webp" alt="portfolio-img1" class="img-fluid"> 
                         </figure>
                      </div>
                   </a>
@@ -471,7 +474,7 @@
                <div class="col-lg-5">
                   <div class="tastimonials-left-con wow slideInLeft" >
                      <figure class="mb-0">
-                        <img src="assets/image/tastimonials-img.png" alt="tastimonials-img" class="img-fluid">
+                        <img src="assets/image/Azad university 3.png" alt="tastimonials-img" class="img-fluid">
                      </figure>
                   </div>
                </div>
